# idle_detect

./: 90-event_detect.preset  90-idle-detect.preset  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  boinc_idle_detect.conf  dc_event_detection.service  dc_event_detection.service.in  dc_idle_detection.service  dc_idle_detection.service.in  dc_pause  dc_unpause  debian.changelog  debian.control  debian.postrm  debian.preinst  debian.prerm  detect_mouse_movement.sh  event_detect.conf  event_detect.conf.in  event_detect.cpp  event_detect.h  event_detect.sh  event_detect_control.sh  force_state.sh  idle-detect-autostart.desktop.in  idle_detect.conf  idle_detect.conf.in  idle_detect.cpp  idle_detect.dsc  idle_detect.h  idle_detect.pro  idle_detect.sh  idle_detect_new_user_setup.sh  idle_detect_resources.sh  idle_detect_wrapper.sh  idle_detect_wrapper.sh.in  install.sh  (+9 more)
.github/workflows/: cmake-multi-platform.yml  linux-packages.yml
debian/: changelog  control  copyright  idle_detect.postinst  postinst  preinst  rules
deprecated/: event_detect.sh
docs/: ROADMAP_1.0.md  building.md  configuration.md  idle_detection_logic.md
docs/html/: annotated.html  classConfig-members.html  classConfig.html  classConfig__inherit__graph.map  classConfig__inherit__graph.md5  classConfig_a1892d0dc4ff12b98eb9e1a8686cb348f_icgraph.map  classConfig_a1892d0dc4ff12b98eb9e1a8686cb348f_icgraph.md5  classConfig_a3656d27476e57b4d37c9a6c787359fb5_cgraph.map  classConfig_a3656d27476e57b4d37c9a6c787359fb5_cgraph.md5  classConfig_ac09c7cadd9898fa1d1585f8b643cfef6_icgraph.map  classConfig_ac09c7cadd9898fa1d1585f8b643cfef6_icgraph.md5  classEventDetectConfig-members.html  classEventDetectConfig.html  classEventDetectConfig__coll__graph.md5  classEventDetectConfig__inherit__graph.map  classEventDetectConfig__inherit__graph.md5  classEventDetect_1_1IdleDetectMonitor-members.html  classEventDetect_1_1IdleDetectMonitor.html  classEventDetect_1_1IdleDetectMonitor_acc4bec04aa1e47e5e7e7fae87cdf2b76_icgraph.map  classEventDetect_1_1IdleDetectMonitor_acc4bec04aa1e47e5e7e7fae87cdf2b76_icgraph.md5  classEventDetect_1_1InputEventRecorders-members.html  classEventDetect_1_1InputEventRecorders.html  classEventDetect_1_1InputEventRecorders_1_1EventRecorder-members.html  classEventDetect_1_1InputEventRecorders_1_1EventRecorder.html  classEventDetect_1_1InputEventRecorders_aafd4194710ca37dee2cb8bd4cc5e50b0_icgraph.map  classEventDetect_1_1InputEventRecorders_aafd4194710ca37dee2cb8bd4cc5e50b0_icgraph.md5  classEventDetect_1_1Monitor-members.html  classEventDetect_1_1Monitor.html  classEventDetect_1_1Monitor_a46b24be7323eaa4f6e396d14108aea6e_icgraph.map  classEventDetect_1_1Monitor_a46b24be7323eaa4f6e396d14108aea6e_icgraph.md5  classEventDetect_1_1Monitor_ae8da256174cfe6eab25421dc1d2673d7_icgraph.map  classEventDetect_1_1Monitor_ae8da256174cfe6eab25421dc1d2673d7_icgraph.md5  classEventDetect_1_1Monitor_af1175eb0bedd877b861bfd76451e8711_icgraph.map  classEventDetect_1_1Monitor_af1175eb0bedd877b861bfd76451e8711_icgraph.md5  classEventDetect_1_1SharedMemoryTimestampExporter-members.html  classEventDetect_1_1SharedMemoryTimestampExporter.html  classEventDetect_1_1SharedMemoryTimestampExporter_ad1fe3658105dcec5df31c8859d843cc5_cgraph.map  classEventDetect_1_1SharedMemoryTimestampExporter_ad1fe3658105dcec5df31c8859d843cc5_cgraph.md5  classEventDetect_1_1SharedMemoryTimestampExporter_af3f039d814ed24dde56b1d525d340a34_icgraph.map  classEventDetect_1_1SharedMemoryTimestampExporter_af3f039d814ed24dde56b1d525d340a34_icgraph.md5  (+133 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  (+8 more)
docs/latex/: annotated.tex  classConfig.tex  classConfig.tex.tmp  classConfig__inherit__graph.md5  classConfig_a1892d0dc4ff12b98eb9e1a8686cb348f_icgraph.md5  classConfig_a3656d27476e57b4d37c9a6c787359fb5_cgraph.md5  classConfig_ac09c7cadd9898fa1d1585f8b643cfef6_icgraph.md5  classEventDetectConfig.tex  classEventDetectConfig__coll__graph.md5  classEventDetectConfig__inherit__graph.md5  classEventDetect_1_1IdleDetectMonitor.tex  classEventDetect_1_1IdleDetectMonitor_acc4bec04aa1e47e5e7e7fae87cdf2b76_icgraph.md5  classEventDetect_1_1InputEventRecorders.tex  classEventDetect_1_1InputEventRecorders_1_1EventRecorder.tex  classEventDetect_1_1InputEventRecorders_aafd4194710ca37dee2cb8bd4cc5e50b0_icgraph.md5  classEventDetect_1_1Monitor.tex  classEventDetect_1_1Monitor_a46b24be7323eaa4f6e396d14108aea6e_icgraph.md5  classEventDetect_1_1Monitor_ae8da256174cfe6eab25421dc1d2673d7_icgraph.md5  classEventDetect_1_1Monitor_af1175eb0bedd877b861bfd76451e8711_icgraph.md5  classEventDetect_1_1SharedMemoryTimestampExporter.tex  classEventDetect_1_1SharedMemoryTimestampExporter_ad1fe3658105dcec5df31c8859d843cc5_cgraph.md5  classEventDetect_1_1SharedMemoryTimestampExporter_af3f039d814ed24dde56b1d525d340a34_icgraph.md5  classEventDetect_1_1TtyMonitor.tex  classEventDetect_1_1TtyMonitor_1_1Tty.tex  classEventDetect_1_1TtyMonitor_a7a3482d371bfa556a13c9ee11ca1a2c2_icgraph.md5  classEventDetect_1_1TtyMonitor_aae27c11393b72229dc03cc4b29f15b80_icgraph.md5  classEventDetect_1_1TtyMonitor_ab0a2e0d72dba323fad08077825432da0_icgraph.md5  classEventIdleDetectException.tex  classEventIdleDetectException__coll__graph.md5  classEventIdleDetectException__inherit__graph.md5  classEventMessage.tex  classEventMessage_a3dd4a7325fcc39e7cfdf2365422ae1c7_icgraph.md5  classEventMessage_aa4656857adf12d74bd0ba9c04e2ee539_icgraph.md5  classEventMessage_aa5356a869ca843577b6af64f5c1c9297_icgraph.md5  classEventMessage_ae13342857432d5274f4d86ecc87cb613_cgraph.md5  classEventMessage_ae9314c9140aec416b1e403c2ec3dad25_cgraph.md5  classFileSystemException.tex  classFileSystemException__coll__graph.md5  classFileSystemException__inherit__graph.md5  classIdleDetectConfig.tex  (+34 more)
tests/: config_tests.cpp  event_message_tests.cpp  util_tests.cpp
(+33 files in other folders)
